<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.akatowolf.sarku_japan.RegistroActivity">


    <ImageView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@drawable/sark_japan"
        android:layout_gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:id="@+id/rUser"
        android:inputType="textPersonName"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:id="@+id/rContrasena"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rContrasena"
        android:id="@+id/rrContrasena"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:id="@+id/rCorreo"
        android:inputType="textEmailAddress"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/aceptar"
        android:id="@+id/rRegistro"
        android:layout_gravity="left"
        android:background="@color/red"
        android:textColorHint="@color/black"
        android:layout_alignParentLeft="true"/>
    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/cancelar"
        android:id="@+id/rCancelar"
        android:background="@color/red"
        android:textColorHint="@color/black"
        android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>
