<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/sark_japan"

    tools:context="com.akatowolf.sarku_japan.LoginActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/miperfil"
        android:textColorHint="@color/black"
        android:id="@+id/rUsuario"
        android:gravity="center"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPersonName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:id="@+id/rContraseña"
        android:textColorHint="@color/black"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint= "@string/entrar"
        android:id="@+id/rEntrar"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@color/red"
        android:textColorHint="@color/black"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/registro"
        android:id="@+id/rRegistro"
        android:layout_gravity="center"
        android:background="@color/red"
        android:textColorHint="@color/black"/>

</LinearLayout>
